fix(wbtimeline): align vertical line with icons

--- a/apps/wbtimeline/src/components/Timeline/styles.module.scss
+++ b/apps/wbtimeline/src/components/Timeline/styles.module.scss
@@ -2,5 +2,5 @@
 .timeline::before {
     content: "";
 
-    @apply absolute left-12 h-full w-[2px] bg-white lg:left-1/2;
+    @apply absolute left-[3.25rem] h-full w-[2px] bg-white lg:left-1/2;
 }
